--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "eslint": "7.18.0",
     "jest": "26.6.3",
     "microbundle": "0.13.0",
-    "prettier": "2.2.1",
-    "size-limit": "4.9.1"
+    "prettier": "2.2.1"
   }
 }
